<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">TodoApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="e_g_date_with_girlfriend">e.g., Date with girlfriend</string>
    <string name="description">Description</string>
    <string name="today">Today</string>
    <string name="category">Category</string>
    <string name="set_time">Set time</string>
    <string name="clear">clear</string>
    <string name="pick_a_date_and_time">Pick a date and time</string>
    <string name="save">SAVE</string>
    <string name="cancel">CANCEL</string>
    <string name="no_category">No category</string>
    <string name="tasks">tasks</string>
    <string name="new_category">New Category</string>
    <string name="task_title">Task title</string>
    <string name="due_date">Due Date</string>
    <string name="descriptions">Descriptions</string>
    <string name="subtasks">Subtasks</string>
    <string name="go_to_school">Go to school</string>
    <string name="_08_30_am_22_may_2022">08:30 AM, 22 May 2022</string>
    <string name="nft_web_app_prototype">NFT Web App Prototype</string>
    <string name="last_year_was_a_fantastic_year_for_nfts_with_the_market_reaching_a_40_billion_valuation_for_the_first_time_in_addition_more_than_10_billion_worth_of_nfts_are_now_sold_every_week_with_nft">Last year was a fantastic year for NFTs, with the market reaching a $40 billion valuation for the first time. In addition, more than $10 billion worth of NFTs are now sold every week – with NFT..</string>
    <string name="new_subtask">New subtask</string>
    <string name="enter_name_of_category">Enter name of category</string>
    <string name="color">Color</string>
    <string name="time">Time</string>
    <string name="task_description">Task Description</string>
    <string name="task_name">Task Name</string>
    <string name="home">Home</string>
    <string name="todo">TODO</string>
    <string name="due_time">Due Time</string>
    <string name="percent">%</string>
    <string name="completion_rate">Completion rate</string>
    <string name="divide">/</string>
    <string name="tasks_completed">Tasks completed</string>
    <string name="categories">Categories</string>
    <string name="my_tasks">My tasks</string>
    <string name="progress">Progress</string>
    <string name="search">Search</string>
    <string name="task">Task</string>

    <string name="chanel_name">Chanel 1</string>
    <string name="chanel_description">This is chanel 1</string>
    <string name="notification_title">Notification</string>
    <string name="account">Account</string>
    <string name="preferences">Preferences</string>
    <string name="go_premium">Go Premium!</string>
    <string name="theme">Theme</string>
    <string name="color_scheme">Color scheme</string>
    <string name="more">More</string>
    <string name="feedback">Feedback</string>
    <string name="rate">Rate</string>
    <string name="support">Support</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="terms_of_use">Terms of use</string>
    <string name="about_us">About us</string>
    <string name="logout">Logout</string>
    <string name="change_password">Change password</string>
    <string name="faq">FAQ</string>
    <string name="profile">Profile</string>
    <string name="dungmanh74_gmail_com">dungmanh74@gmail.com</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="podomoro_time">Podomoro time</string>
    <string name="pomodoro_time">Pomodoro time</string>
    <string name="short_break_time">Short break time</string>
    <string name="long_break_time">Long break time</string>
    <string name="focus">Focus</string>
    <string name="full_name">Full name</string>
    <string name="email">Email</string>
    <string name="submit">SUBMIT</string>
    <string name="phone_number">Phone number</string>

</resources>