<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".Dialog.AddTaskDialog">
    <View
        android:layout_width="48dp"
        android:layout_height="4dp"
        android:background="@drawable/bg_handle"
        android:layout_gravity="center_horizontal"
    />
    <EditText
        android:id="@+id/et_task_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:hint="@string/e_g_date_with_girlfriend"
        android:inputType="textCapSentences"
        android:maxLines="1"
        android:paddingHorizontal="8dp"
        android:paddingVertical="16dp"
        android:textColorHint="#ACA9A9"
        android:textSize="24sp"
        android:textStyle="bold"
        />
    <EditText
        android:id="@+id/et_task_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:hint="@string/description"
        android:inputType="textCapSentences"
        android:maxLines="2"
        android:paddingHorizontal="8dp"
        android:paddingVertical="16dp"
        android:textColorHint="#ACA9A9"
        android:textSize="16sp"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">
        <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@+id/bt_add_task"
            android:layout_alignParentStart="true"
            android:layout_marginEnd="16dp"
            android:padding="8dp"
            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp">
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/bt_set_due_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:icon="@drawable/ic_calendar"
                    android:text="@string/today"
                    style="@style/Widget.Material3.Button.OutlinedButton"
                    />
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/bt_set_due_time"
                    android:layout_marginStart="16dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:icon="@drawable/ic_clock"
                    android:text="@string/time"
                    style="@style/Widget.Material3.Button.OutlinedButton"
                    />
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/bt_set_category"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:icon="@drawable/ic_category"
                    android:text="@string/category"
                    style="@style/Widget.Material3.Button.OutlinedButton"
                    android:layout_marginStart="16dp"
                    />
            </LinearLayout>
        </HorizontalScrollView>
        <ImageView
            android:id="@+id/bt_add_task"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_confirm"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>



</LinearLayout>