<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F9F9FB"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_white"
            android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/profile"
            android:textColor="@color/black"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/inter_semibold"
            android:textStyle="bold"
            android:layout_marginTop="20dp" />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.makeramen.roundedimageview.RoundedImageView
                    android:id="@+id/headerProfile"
                    android:layout_width="match_parent"
                    android:layout_height="160dp"
                    android:layout_marginVertical="8dp"
                    android:layout_marginHorizontal="16dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/proptit"
                    app:riv_corner_radius="25dp" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="match_parent"
                    android:id="@+id/profile_image"
                    android:layout_height="100dp"
                    app:civ_border_width="2dp"
                    app:civ_border_color="@color/blue_bg_light"
                    android:src="@drawable/meo"
                    android:layout_marginTop="125dp"
                 >
                </de.hdodenhof.circleimageview.CircleImageView>
            </RelativeLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:gravity="center"
                android:text="I'm Dunggggg"
                android:id="@+id/profileName"
                android:fontFamily="@font/inter_semibold"
                android:textColor="@color/black"
                android:layout_gravity="center_horizontal" />
            <TextView
                android:id="@+id/profileEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:alpha="0.5"
                android:text="@string/dungmanh74_gmail_com"
                android:textColor="#7E8491"
                android:fontFamily="@font/inter_medium"
                android:layout_gravity="center_horizontal" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:orientation="vertical">
            <TextView
                android:fontFamily="@font/inter_medium"
                android:textColor="#7E8491"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/account"
                />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/ed_profile"
                style="@style/MyCustomDrawableStyle"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                android:clickable="true"
                android:elevation="10dp"
                android:focusable="true"
                android:padding="16dp"
                app:cardCornerRadius="10dp"
                app:cardMaxElevation="10dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="16dp"
                    android:src="@drawable/user__1_" />

                <TextView
                    android:fontFamily="@font/inter_medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/edit_profile" />

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                app:cardCornerRadius="10dp"
                app:cardMaxElevation="10dp"
                android:elevation="10dp"
                android:padding="16dp"
                android:clickable="true"
                android:focusable="true">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="16dp"
                    android:src="@drawable/ic_lock"/>
                <TextView
                    android:fontFamily="@font/inter_medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/change_password"/>

            </com.google.android.material.card.MaterialCardView>
            <com.google.android.material.card.MaterialCardView
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:padding="16dp"
                app:cardCornerRadius="10dp"
                android:clickable="true"
                android:focusable="true"
                >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="16dp"
                    android:src="@drawable/ic_crown"/>
                <TextView
                    android:fontFamily="@font/inter_medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="#F4AF25"
                    android:text="@string/go_premium"/>

            </com.google.android.material.card.MaterialCardView>
            <TextView
                android:fontFamily="@font/inter_medium"
                android:textColor="#7E8491"
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/preferences"
                />
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/theme_app"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                android:clickable="true"
                android:focusable="true"
                app:cardCornerRadius="10dp"
                android:padding="16dp">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="16dp"
                    android:src="@drawable/ic_brushh"/>
                <TextView
                    android:fontFamily="@font/inter_medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/theme"/>

            </com.google.android.material.card.MaterialCardView>
            <com.google.android.material.card.MaterialCardView
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:clickable="true"
                android:focusable="true"
                app:cardCornerRadius="10dp"
                android:padding="16dp">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="16dp"
                    android:src="@drawable/ic_brush"/>
                <TextView
                    android:fontFamily="@font/inter_medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/color_scheme"/>

            </com.google.android.material.card.MaterialCardView>
            <TextView
                android:fontFamily="@font/inter_medium"
                android:textColor="#7E8491"
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/more"
                />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                android:clickable="true"
                android:focusable="true"
                app:cardCornerRadius="10dp"
                android:padding="16dp">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="16dp"
                    android:src="@drawable/ic_feedback"/>
                <TextView
                    android:fontFamily="@font/inter_medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/feedback"/>

            </com.google.android.material.card.MaterialCardView>
            <com.google.android.material.card.MaterialCardView
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:padding="16dp"
                app:cardCornerRadius="10dp"
                android:clickable="true"
                android:focusable="true">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="16dp"
                    android:src="@drawable/ic_rate" />
                <TextView
                    android:fontFamily="@font/inter_medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/rate"/>

            </com.google.android.material.card.MaterialCardView>
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:clickable="true"
                android:focusable="true"
                app:cardCornerRadius="10dp"
                android:padding="16dp">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="16dp"
                    android:src="@drawable/ic_support"/>
                <TextView
                    android:fontFamily="@font/inter_medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/support"/>

            </com.google.android.material.card.MaterialCardView>
            <com.google.android.material.card.MaterialCardView
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:clickable="true"
                android:focusable="true"
                app:cardCornerRadius="10dp"
                android:padding="16dp">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="16dp"
                    android:src="@drawable/ic_faq"/>
                <TextView
                    android:fontFamily="@font/inter_medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/faq"/>

            </com.google.android.material.card.MaterialCardView>
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:clickable="true"
                android:focusable="true"
                app:cardCornerRadius="10dp"
                android:padding="16dp">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="16dp"
                    android:src="@drawable/ic_privacy_policy"/>
                <TextView
                    android:fontFamily="@font/inter_medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/privacy_policy"/>

            </com.google.android.material.card.MaterialCardView>
            <com.google.android.material.card.MaterialCardView
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:clickable="true"
                android:focusable="true"
                app:cardCornerRadius="10dp"
                android:padding="16dp">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="16dp"
                    android:src="@drawable/ic_term"/>
                <TextView
                    android:fontFamily="@font/inter_medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/terms_of_use"/>

            </com.google.android.material.card.MaterialCardView>
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:clickable="true"
                android:focusable="true"
                app:cardCornerRadius="10dp"
                android:padding="16dp">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="16dp"
                    android:src="@drawable/ic_about_us"/>
                <TextView
                    android:fontFamily="@font/inter_medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/about_us"/>

            </com.google.android.material.card.MaterialCardView>
            <com.google.android.material.card.MaterialCardView
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:clickable="true"
                android:focusable="true"
                app:cardCornerRadius="10dp"
                android:padding="16dp">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="16dp"
                    android:src="@drawable/ic_logout"/>
                <TextView
                    android:fontFamily="@font/inter_medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="#F44725"
                    android:text="@string/logout"/>

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>
    </LinearLayout>
</ScrollView>