<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragment.DetailTaskFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_semibold"
        app:navigationIcon="@drawable/ic_back"
        app:title="Task detail"
        app:titleCentered="true">

        <CheckBox
            android:id="@+id/cb_task_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/CustomCheckBox"
            android:layout_gravity="end"
            />
    </com.google.android.material.appbar.MaterialToolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/task_title"
                android:textColor="#025A9A"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:textSize="16sp"
                android:fontFamily="@font/inter"
                />
            <EditText
                android:fontFamily="@font/inter_semibold"
                android:id="@+id/tv_task_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="32sp"
                android:layout_marginHorizontal="16dp"
                android:importantForAutofill="no"
                android:inputType="textShortMessage"
                android:background="@android:color/transparent"
                android:text="@string/nft_web_app_prototype"

                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/due_date"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:textSize="16sp"
                android:fontFamily="@font/inter"
                android:textColor="#025A9A"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/tv_task_due_date"
                    android:layout_toEndOf="@+id/tv_task_due_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_semibold"
                    android:gravity="center"
                    android:maxLines="1"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_centerVertical="true"
                    tools:text="22 May 2022" />

                <TextView
                    android:layout_centerVertical="true"
                    android:id="@+id/tv_task_due_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:maxLines="1"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:text="18:00 PM" />
                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/cv_status"
                    android:backgroundTint="#D9E8F4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="16dp"
                    style="@style/Widget.Material3.CardView.Filled">
                    <TextView
                        android:id="@+id/tv_status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="8dp"
                        android:layout_marginHorizontal="16dp"
                        android:textColor="#025A9A"
                        android:fontFamily="@font/inter_medium"
                        android:text="On progress"
                        android:textSize="12sp" />
                </com.google.android.material.card.MaterialCardView>

            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/descriptions"
                android:layout_marginHorizontal="16dp"
                android:textSize="16sp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/inter"
                android:textColor="#025A9A"
                />
            <EditText
                android:id="@+id/tv_task_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:text="@string/last_year_was_a_fantastic_year_for_nfts_with_the_market_reaching_a_40_billion_valuation_for_the_first_time_in_addition_more_than_10_billion_worth_of_nfts_are_now_sold_every_week_with_nft"
                android:textSize="18sp"
                android:textStyle="bold"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:fontFamily="@font/inter_semibold"
                android:background="@android:color/transparent"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/subtasks"
                android:layout_marginHorizontal="16dp"
                android:textSize="16sp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/inter"
                android:textColor="#025A9A"
                />
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_subtasks"
                android:layout_marginHorizontal="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:listitem="@layout/item_subtask_rv"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                />
            <EditText
                android:padding="16dp"
                android:id="@+id/ed_add_subtask"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/new_subtask"
                android:textSize="20sp"
                android:layout_gravity="center_vertical"
                android:maxLines="1"
                android:imeOptions="actionDone"
                android:layout_marginHorizontal="16dp"
                android:importantForAutofill="no"
                android:inputType="textCapSentences|textShortMessage|textNoSuggestions"
                />

        </LinearLayout>
    </ScrollView>
</LinearLayout>